fix layout bug and added styling to modal class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -592,6 +592,10 @@ nav ul li a:hover {
     max-height: 85vh;
     overflow-y: auto;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
 }
 
 .close-button {
